# datahut-duckhouse

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  validate_project.py
.github/workflows/: ci.yml
config/tenants/: tenants.yml
config/trino/etc/: hadoop-config.xml  jvm.config  node.properties  resource-groups.json  resource-groups.properties  trino.properties
config/trino/etc/catalog/: iceberg.properties  tenant_acme.properties
docs/: CORRECTED_ARCHITECTURE_SUMMARY.md  ENHANCEMENTS.md  TRINO_DBT_IMPLEMENTATION_SUMMARY.md  TRINO_DBT_INTEGRATION.md
flight_server/: Dockerfile  app.py  utils.py
flight_server/app/: app.py  app_xorq.py  monitoring.py  query_orchestrator.py  trino_client.py  utils.py  xorq_config.py
flight_server/app/backends/: hybrid_backend.py  iceberg_backend.py
ingestion/: __init__.py  data_ingestion.py
ingestion/data/: data.csv  duckhouse.duckdb
query_engine/: unified_query.py
scripts/: create_tenant.py  delete_tenant.py  demonstrate_architecture.py  ingest_flight.py  pipeline.py  query_duckdb.py  query_trino.py  run_dbt.py  setup_iceberg_tables.py
tests/: __init__.py  conftest.py  test_hybrid_backend.py  test_query_orchestrator.py  test_trino_client.py  test_utils.py
transform/dbt_project/: dbt_project.yml
transform/dbt_project/config/: dbt_profiles.yml
transform/dbt_project/macros/: data_quality_checks.sql  get_column_values.sql
transform/dbt_project/models/: sources.yml
transform/dbt_project/models/marts/: mart_disease_analytics.sql  mart_iceberg_integration.sql  mart_rev_metrics.sql  mart_rev_summary.sql
transform/dbt_project/models/staging/: schema.yml  sources.yml  stg_healthcare_data.sql  stg_rev.sql
transform/dbt_project/seeds/: datasource_metadata.csv
transform/dbt_project/tests/: test_data_quality.sql
xorq/: Dockerfile  README.md  api.py  core.py  main.py
xorq-admin-dashboard/: Dockerfile  package-lock.json  package.json  vite.config.ts
xorq-admin-dashboard/src/: App.tsx  api.ts
xorq-admin-dashboard/src/pages/: TenantDetail.tsx  Tenants.tsx
