[project]
name = "datahut-duckhouse"
version = "0.1.0"
description = "A hybrid data stack combining DuckDB, Iceberg, Arrow Flight, and dbt"
authors = [
    {name = "Geobatpo07", email = "lgeobatpo98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "duckdb",
    "pyarrow[flight]",
    "pandas",
    "grpcio",
    "grpcio-tools",
    "pyiceberg>=0.9.0",
    "dbt-core>=1.9.0",
    "dbt-duckdb>=1.9.2",
    "s3fs",
    "boto3",
    "python-dotenv",
    "xorq>=0.2.2",
    "urllib3>=2.2.3",
    "opentelemetry-api>=1.32.1",
    "registry (>=0.4.2,<0.5.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipython = "^9.0.2"
ruff = "^0.6.7"
